<resources>
    <string name="app_name">新奇世界</string>
    <string name="menu_home_page">首页</string>
    <string name="menu_scenic">新奇景区</string>
    <string name="menu_ylt">逸乐通</string>
    <string name="menu_member_center">会员中心</string>
    <string name="menu_newcomer">热点问题</string>
    <string name="menu_conn">联系我们</string>
    <string name="ylt_card">逸乐通卡</string>
    <string name="ylt_type">类型</string>
    <string name="ylt_area">面积</string>
    <string name="ylt_price">价格</string>
    <string name="read_more">阅读更多</string>
    <string name="project_info">项目信息</string>
    <string name="now_buy_string">立即购买</string>
    <string name="title_home_page">新奇世界 总有新发现</string>
    <string name="title_scenic">新奇景区</string>
    <string name="title_ylt">逸乐通</string>
    <string name="title_member_center">会员中心</string>
    <string name="title_newcomer">新手指引</string>
    <string name="title_conn">联系我们</string>
    <string name="on_down_to_exit">再按一次退出程序</string>
    <string name="mc_log_in_now">马上登陆</string>
    <string name="mc_income">收益</string>
    <string name="mc_my_order">我的订单</string>
    <string name="mc_my_message">我的消息</string>
    <string name="mc_my_wishlist">我的心愿单</string>
    <string name="mc_account_settings">账户设置</string>
    <string name="mc_about_us">关于我们</string>
    <string name="phone_number">手机号</string>
    <string name="login">登录</string>
    <string name="registered">注册</string>
    <string name="determine">确定</string>
    <string name="forget_password">忘记密码</string>
    <string name="next">下一步</string>
    <string name="personal_information">个人资料</string>
    <string name="replace_avatar">更换头像</string>
    <string name="nickname">昵称：</string>
    <string name="nickname2">昵称</string>
    <string name="full_name">姓名：</string>
    <string name="gender">性别：</string>
    <string name="mr">先生</string>
    <string name="ms">女士</string>
    <string name="id_number">身份证号：</string>
    <string name="phone">手机号：</string>
    <string name="save">保存</string>
    <string name="please_enter_the_phone_number_to_login_register">请输入手机号进行登陆、注册</string>
    <string name="please_enter_your_password">请输入密码</string>
    <string name="please_enter_verification_code">请输入短信验证码</string>
    <string name="set_password">请设置登录密码</string>
    <string name="registration_success">注册成功</string>
    <string name="landed_successfully">登陆成功</string>
    <string name="password_reset_complete">密码修改成功</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="please_enter_phone_number">请输入手机号</string>
    <string name="I_have_read_and_agree">我已阅读并同意以下协议</string>
    <string name="xqsj_registration_agreement">《新奇世界注册协议》</string>
    <string name="getpower">获赠产权</string>
    <string name="freein">自由入住</string>
    <string name="moneygetstr">经济收益</string>
    <string name="use_teach">使用流程</string>
    <string name="ylg_product">逸乐通产品</string>
    <string name="playstr">尊享游乐</string>
    <string name="hot_project">热销项目</string>
    <string name="more_address">更多目的地</string>
    <string name="main_ylt_title">逸乐通</string>
    <string name="themeparks_title">主题乐园</string>
    <string name="informations_title">热点资讯</string>
    <string name="safe_title">安全保障</string>
    <string name="network_requests_fail">网络请求失败</string>
    <string name="the_password_is_6_to_18_digits_and_letters">密码是6~18位的数字与字母的组合,请重新输入</string>
    <string name="feedback_can_not_be_empty">反馈内容不能为空</string>
    <string name="feedback_success">反馈成功</string>
    <string name="the_phone_number_can_not_be_empty">手机号不能为空</string>
    <string name="the_phone_number_is_not_legitimate">手机号不合法</string>
    <string name="code_is_incorrect">验证码有误</string>
    <string name="sent_verification_code">已发送验证码（免费）到</string>
    <string name="you_do_not_agree_to_the_new_world_eegistration_agreement">您未同意《新奇世界注册协议》</string>
    <string name="please_enter_the_recipient">请输入收件人</string>
    <string name="please_select_mailing_address">请选择邮寄地址</string>
    <string name="please_enter_the_full_address">请输入详细地址</string>
    <string name="please_enter_a_nickname">请输入昵称</string>
    <string name="please_type_in_your_name">请输入姓名</string>
    <string name="please_select_a_gender">请选择性别</string>
    <string name="please_enter_the_id_number">请输入身份证号</string>
    <string name="Invalid_id_card_number">身份证号不合法</string>
    <string name="my_wallet">我的钱包</string>
    <string name="transaction_record">充值记录</string>
    <string name="owner_xqb">业主新奇币</string>
    <string name="cash_bonuses">现金奖励</string>
    <string name="account_balance">账户余额</string>
    <string name="setup_center">设置中心</string>
    <string name="push_message_remind">推送消息提醒</string>
    <string name="feedback">意见反馈</string>
    <string name="address_list">地址列表</string>
    <string name="new_address">新增地址</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="added_successfully">添加成功</string>
    <string name="successfully_modified">修改成功</string>
    <string name="successfully_deleted">删除成功</string>
    <string name="no_delivery_address">没有收货地址</string>
    <string name="after_editing_can_not_be_modified">编辑后不可修改</string>
    <string name="add_a_new_address">添加新地址</string>
    <string name="current_version">检测更新</string>
    <string name="addressee">收件人：</string>
    <string name="contact_information">联系方式：</string>
    <string name="mailing_address">邮寄地址：</string>
    <string name="address">详细地址：</string>
    <string name="change_pwd">修改密码</string>
    <string name="please_enter_the_original_password_login">请输入原登陆密码</string>
    <string name="enter_a_new_login_password">请输入新登录密码</string>
    <string name="submit">提交</string>
    <string name="for_our_evaluation">给我们评价</string>
    <string name="exit_login">退出登录</string>
    <string name="string_scenic_topword">新 奇 世 界</string>
    <string name="stralwayshavefind">总  有  新  发  现</string>
    <string name="strprojectdetail">项目详情</string>
    <string name="strprojectdetail_ask">咨询</string>
    <string name="strprojectdetail_call">电话</string>
    <string name="about_us">关于我们</string>
    <string name="company_describe">北京中弘网络营销顾问有限公司为中弘控股股份有限公司的全子公司。“新奇世界”作为北京中弘网络营销顾问有限公司的主打品牌，为中国家庭打造全家新趣处。新奇世界平台涵盖旅游度假、主题公园、文化休闲、康体养生高端商业及国际度假区产权型物业等多种类型，同时与当地特色文化、景观充分贴合，将山地拓展、高尔夫、滑雪游艇、马球、剧场、热气球、酒店、养老社区、主题公园会议中心等超过15种适合不同年龄段家庭成员的业态匹配其中，为客户营造出一个老少皆宜的度假天堂。</string>
    <string name="xqsj">新奇世界</string>
    <string name="property_in_copyright">版权所有</string>
    <string name="use_and_service_protocol">软件使用及服务协议</string>
    <string name="copyright">Copyright@2016 xqsj.com 京ICP备 14029702-3号</string>
    <string name="confirm_order">确认订单</string>
    <string name="name_buyers">购房人姓名：</string>
    <string name="cellphone_number">手机号码：</string>
    <string name="access_contract_information_failed">获取合同信息失败</string>
    <string name="deposit_remind">定金支付后不可退款，请谨慎操作</string>
    <string name="specification_selection_remind">开盘后，客服会联系您支付余款</string>
    <string name="You_have_chosen">您已选择</string>
    <string name="money">¥</string>
    <string name="earnest">定金：¥</string>
    <string name="earnest1">定金</string>
    <string name="square">㎡</string>
    <string name="pay_money">付款</string>
    <string name="wait_pay_earnest_money">待付定金</string>
    <string name="wait_pay_the_balance">待付余款</string>
    <string name="contract_progress">合同进度</string>
    <string name="contract_download">合同下载</string>
    <string name="again_buy">重新购买</string>
    <string name="order_number">订单编号</string>
    <string name="order_time">订单时间</string>
    <string name="cancel_order">取消订单</string>
    <string name="pay_money_time">支付时间</string>
    <string name="pay_money_count">支付金额</string>
    <string name="pay_status">状态</string>
    <string name="order_detail">订单详情</string>
    <string name="download_contract">下载合同</string>
    <string name="contract_post_address">合同邮寄地址：</string>
    <string name="take_care">注意:为保证你的合法权益，合同签署时，请务必不要填写日期</string>
    <string name="question_consulting_tel">如有疑问可咨询400——900——0979</string>
    <string name="download_all_contract">下载全部合同</string>
    <string name="safe_guard_string">上市保障</string>
    <string name="safe_pay_string">安全支付</string>
    <string name="informations_all_sring">阅读全部</string>
    <string name="know_ylt_sring">了解逸乐通</string>
    <string name="know_ylt_fix1">获赠产权</string>
    <string name="know_ylt_fix2">自由入住</string>
    <string name="know_ylt_fix3">经营收益</string>
    <string name="know_ylt_fix4">尊享游乐</string>
    <string name="moreapp_sdcard_not_exist">SD卡不存在</string>
    <string name="open_web_fail">打开网页失败(%1$s)</string>
    <string name="no_right_tel">请确认是否有打电话权限</string>
    <string name="no_right_mail">请确认是否有发邮件权限</string>
    <string name="no_right_sendsms">无法调用短信功能，请检查终端类型和短信使用权限</string>
    <string name="moreapp_downloading">正在加载...</string>
    <string name="update_networktimeout">网络连接超时，请检查您的网络环境</string>
    <string name="download_success">"附件下载完成,保存的路径是:"</string>
    <string name="cant_open_suffix_file">对不起,您的手机无法打开此类型的文件</string>
    <string name="enter_your_valuable_comments">请输入您的宝贵意见</string>
    <string name="loading1">加载中...</string>
    <string name="loading">加载更多</string>
    <string name="loading_submit">提交数据中...</string>
    <string name="net_error">网络异常</string>
    <string name="data_null">暂无数据</string>
    <string name="data_exption">数据异常，下拉刷新</string>
    <string name="net_exption">网络异常，下拉刷新</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="pull_down_to_reload">下拉可重新加载</string>
    <string name="tap_the_screen_to_reload">点击屏幕可重新加载</string>
    <string name="project_detail">项目详情</string>
    <string name="view_contract">查看合同</string>
    <string name="project_location">项目位置</string>
    <string name="title_activity_project_photo">ProjectPhotoActivity</string>
    <string name="sale">在售</string>
    <string name="no_sale">不在售</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pro_ject_photo_vertical">ProJectPhotoVerticalActivity</string>
    <string name="telaction_msg">是否要联系我们</string>
    <string name="tel_msg">确认拨打电话</string>
    <string name="btn_ok_sting">确认</string>
    <string name="btn_cancel_sting">取消</string>
    <string name="dialog_updte_tile">新版本更新</string>
    <string name="dialog_updte_tag">新版本号：</string>
    <string name="dialog_updte_content">更新内容：</string>
    <string name="updte_complete">下载完成：</string>
    <string name="sd_cannot_find">SD卡找不到</string>
    <string name="down_app_text">%</string>
    <string name="app_place_folder">xqsj</string>
    <string name="app_place_apk">xqsj.apk</string>
    <string name="strqqzone">QQ空间</string>
    <string name="strsinawb">新浪微博</string>
    <string name="strpyq">朋友圈</string>
    <string name="strwx">微信</string>
    <string name="strqq">QQ</string>
    <string name="order_pay_title">订单支付</string>
    <string name="order_pay_num">订单编号</string>
    <string name="order_pay_time">订单时间</string>
    <string name="order_pay_paid">已付金额</string>
    <string name="order_pay_waitpay">待付金额</string>
    <string name="order_deposit_amount">定金金额</string>
    <string name="order_pay_paymoney">支付金额</string>
    <string name="order_pay_paymoneyhint">请输入金额</string>
    <string name="order_pay_info">由于各银行在线支付有额度限制,建议您分次完成支付余款</string>
    <string name="order_earnest_pay_info">注：定金支付后，定金不可退，请谨慎操作</string>
    <string name="order_pay_string">去支付</string>
    <string name="pay_type_aipay">支付宝</string>
    <string name="pay_type_spdbccc">浦发银行</string>
    <string name="info_title_string">支付方式</string>
    <string name="pay_success_title">支付成功</string>
    <string name="pay_fail_title">支付失败</string>
    <string name="pay_succ_money">恭喜，您已成功支付</string>
    <string name="pay_off">恭喜，您已付清</string>
    <string name="project_name">项目名称</string>
    <string name="pay_project_money">付款金额</string>
    <string name="btn_continue_pay">继续支付</string>
    <string name="pay_finish_project">您已经付清</string>
</resources>