<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xqshijie="http://schemas.android.com/apk/res-auto"
    style="@style/ActivityLinearLayout"
    android:background="@color/mc_blank_page_color">

    <!-- 标题栏 -->
    <com.zhonghong.xqshijie.widget.TitleView
        android:id="@id/title"
        style="@style/title"
        xqshijie:leftImageSrc="@drawable/ic_return"
        xqshijie:centerValue="@string/setup_center" />

    <LinearLayout
        android:background="@color/white"
        android:id="@+id/ll_container"
        android:paddingLeft="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                style="@style/setting_item_style"
                android:text="@string/push_message_remind"/>
            <Button
                android:text="滑动开关"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:visibility="gone"
            android:background="@color/mc_page_boundary_color"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <TextView
            android:id="@+id/tv_feedback"
            style="@style/setting_item_style"
            android:text="@string/feedback"/>
        <View
            android:background="@color/mc_page_boundary_color"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <TextView
            android:id="@+id/tv_address_list"
            style="@style/setting_item_style"
            android:text="@string/address_list"/>
        <View
            android:background="@color/mc_page_boundary_color"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <RelativeLayout
            android:id="@+id/rl_current_version"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
               style="@style/setting_item_style"
                android:text="@string/current_version"/>
            <TextView
                android:gravity="center_vertical"
                android:paddingRight="30dp"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:id="@+id/tv_current_version"
                android:layout_alignParentRight="true"
                android:textSize="14sp"
                android:textColor="@color/text_mr_ms_color"
                android:text="v1.0"/>
        </RelativeLayout>
        <View
            android:background="@color/mc_page_boundary_color"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <TextView
            android:id="@+id/tv_change_password"
            style="@style/setting_item_style"
            android:text="@string/change_pwd"/>
        <View
            android:visibility="gone"
            android:background="@color/bgColor_divier"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <TextView
            android:visibility="gone"
            android:id="@+id/tv_for_our_evaluation"
            style="@style/setting_item_style"
            android:text="@string/for_our_evaluation"
            android:textColor="@color/text_color"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_exit_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:textSize="17sp"
        android:background="@drawable/common_btn_entity_blue"
        android:textColor="@color/white"
        android:text="@string/exit_login"/>
</LinearLayout>