<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_pay_money_time"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:text="@string/pay_money_time" />

    <TextView
        android:id="@+id/tv_pay_money_count"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:text="@string/pay_money_count" />

    <TextView
        android:id="@+id/tv_pay_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/pay_status" />

</LinearLayout>

