<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xqshijie="http://schemas.android.com/apk/res-auto"
    style="@style/ActivityLinearLayout">

    <!-- 标题栏 -->
    <com.zhonghong.xqshijie.widget.TitleView
        android:id="@id/title"
        style="@style/title"
        xqshijie:leftImageSrc="@drawable/ic_return"
        xqshijie:centerValue="@string/about_us" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/about_us_logo"
                android:gravity="center" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textColor="@color/defuat_text_color"
            android:textSize="@dimen/text_size_small"
            android:text="@string/company_describe" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xqsj"
                android:textColor="@color/defuat_text_grey_color"
                android:textSize="@dimen/text_size_10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/property_in_copyright"
                android:textColor="@color/defuat_text_grey_color"
                android:textSize="@dimen/text_size_10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/use_and_service_protocol"
                android:textColor="@color/defuat_text_grey_color"
                android:textSize="@dimen/text_size_10sp" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/copyright"
            android:layout_marginBottom="15dp"
            android:textColor="@color/defuat_text_grey_color"
            android:textSize="@dimen/text_size_10sp" />
    </LinearLayout>

</RelativeLayout>