<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_information_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:xqshijie="http://schemas.android.com/apk/res-auto"
    android:background="@color/mc_blank_page_color"
    android:orientation="vertical">
    <com.zhonghong.xqshijie.widget.TitleView
        android:id="@id/title"
        style="@style/title"
        xqshijie:leftImageSrc="@drawable/ic_return"
        xqshijie:centerValue="@string/personal_information" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">
        <TextView
            android:id="@+id/tv_information_replace_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replace_avatar"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            android:textColor="@color/text_color"/>
        <com.zhonghong.xqshijie.widget.RoundAngleImageView
            android:id="@+id/iv_information_replace_avatar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_member_centre_head_portrait"
            xqshijie:roundWidth="28dp"
            xqshijie:roundHeight="28dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mc_page_boundary_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="15sp"
            android:textColor="@color/text_color"/>
        <com.zhonghong.xqshijie.widget.CleanableEditText
            android:id="@+id/et_information_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="15dp"
            android:inputType="text"
            android:maxLength="12"
            android:background="@null"
            android:drawableRight="@drawable/ic_erasing_input"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mc_page_boundary_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="15sp"
            android:textColor="@color/text_color"/>
        <com.zhonghong.xqshijie.widget.CleanableEditText
            android:id="@+id/et_information_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="15dp"
            android:inputType="text"
            android:hint="@string/after_editing_can_not_be_modified"
            android:maxLength="8"
            android:background="@null"
            android:drawableRight="@drawable/ic_erasing_input"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mc_page_boundary_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="15sp"
            android:textColor="@color/text_color"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp">
            <RadioButton
                android:id="@+id/rb_information_mr"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/mr"
                android:textSize="14sp"
                android:textColor="@color/text_mr_ms_color"/>
            <RadioButton
                android:id="@+id/rb_information_ms"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/ms"
                android:textSize="14sp"
                android:textColor="@color/text_mr_ms_color"/>
        </RadioGroup>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mc_page_boundary_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_number"
            android:textSize="15sp"
            android:textColor="@color/text_color"/>
        <com.zhonghong.xqshijie.widget.CleanableEditText
            android:id="@+id/et_information_id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:inputType="phone"
            android:hint="@string/after_editing_can_not_be_modified"
            android:maxLength="18"
            android:drawableRight="@drawable/ic_erasing_input"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mc_page_boundary_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="15sp"
            android:textColor="@color/text_color"/>
        <com.zhonghong.xqshijie.widget.CleanableEditText
            android:id="@+id/et_information_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:inputType="phone"
            android:hint="@string/after_editing_can_not_be_modified"
            android:maxLength="11"
            android:drawableRight="@drawable/ic_erasing_input"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_information_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:text="@string/save"
        android:textSize="17sp"
        android:background="@drawable/common_btn_entity_blue"
        android:textColor="@color/white"/>
</LinearLayout>
